<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100f10"
    tools:context=".game">

    <Button
        android:id="@+id/button7"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/rounded"
        android:onClick="clickNum"
        android:text="@string/number"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded"
        android:onClick="clickNum"
        android:text="@string/number"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded"
        android:onClick="clickNum"
        android:text="@string/number"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/rounded"
        android:onClick="clickNum"
        android:text="@string/number"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/rounded_black"
        android:onClick="clickOperator"
        android:text="@string/add"
        android:textColor="@android:color/holo_green_light"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/rounded_black"
        android:onClick="clickOperator"
        android:text="@string/multiply"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus"
        android:layout_width="68dp"
        android:layout_height="69dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/rounded_black"
        android:onClick="clickOperator"
        android:text="@string/minus"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="42sp"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/divide"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/rounded_black"
        android:onClick="clickOperator"
        android:text="@string/divide"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginTop="392dp"
        android:background="@drawable/rounded_blue"
        android:onClick="showSolution"
        android:text="@string/show_solution"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="392dp"
        android:background="@drawable/rounded_yellow"
        android:onClick="undo"
        android:text="@string/undo"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>